hueLightScheduler/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: lightscheduler-service
    namespace: gohome
    labels:
        app: lightscheduler
spec:
    selector:
        app: lightscheduler
    ports:
        - protocol: TCP
          port: 8100
          targetPort: http
          name: http
    type: ClusterIP
