hueLightScheduler/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: lightscheduler-ingress
    namespace: gohome
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
    ingressClassName: nginx
    rules:
        - host: lightscheduler.lab
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: lightscheduler-service
                            port:
                                number: 8100
